Changes for 1.5.1
* Made sure all m_variable types in attachments exactly match the new instance type that is used. This, combined with the previous 2 changes, should fix the history panel bugs that are being caused by not being able to find the correct setter. (veqryn)

* Changing the way the ChangeFactory uses PropertyUtil for getting the old value of properties. Previously relied on the "get" method for getting the old value. Now it will directly access and store the "m_" object. getRawProperty no longer used. (veqryn)

* Allowed changes to all attachments to be undone and redone in the history panel, by ensuring each setter has an additional setter for an object of the field's type. (veqryn)

* Preventing history panel from updating if moused over, and allowing it to scroll down if not. (frigoref & veqryn)

* Allowing route to recalculate if only air can make it. (frigoref)

* More optimizations of getBestRoute. Also changing "Parse Selected" to be default parsing strategy of maps. (veqryn)

* Changing getBestRoute to not use territories for which the owner's relationship with us does not allow us to pass. (veqryn)

* Fixing getBestRoute to never use impassible and restricted territories. (veqryn)

* Adding Global 1940 as test xml. (veqryn)

* Fixing weird tech attachment getters to use booleans rather than strings. (veqryn)

* Making sure that all attachment variables that start out as Null, can return to being null again through their setter. (veqryn)

* Fixing various errors introduced into casualty selection. (veqryn)

* Fixed null pointer error for players who have damaged units but no repair frontier. (veqryn)

* Adding Europe 1940 as test xml. (veqryn)

* Fixed more "Lock not held" errors, and a potential null pointer in the battle calculator. (veqryn)

* Possible fix for ConcurrentModificationException in BattleModel.refresh -> DiceRoll.isAmphibiousMarine -> BattleTracker.getPendingBattleSites. (veqryn)
